up api Filter data
