# app/Component/Ad/Infrastructure/Http/Handler/StoreBuyAdHandler.php
@@ -5,8 +5,7 @@ namespace App\Component\Ad\Infrastructure\Http\Handler;
 use App\Component\Ad\Application\Mapper\AdMapperInterface;
 use App\Component\Ad\Application\Service\AdServiceInterface;
 use App\Component\Ad\Domain\Enum\MainType;
-use App\Component\Ad\Infrastructure\Http\Request\StoreSellAdRequest;
-use App\Component\Ad\Presentation\ViewModel\AdExistsAdViewModel;
+use App\Component\Ad\Infrastructure\Http\Request\StoreBuyAdRequest;
 use App\Libraries\Base\Http\Handler;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Auth;
@@ -15,11 +14,11 @@ use Illuminate\Support\Facades\DB;
 use OpenApi\Attributes as OA;
 
 #[OA\Post(
-    path: '/api/v1/ads/store-sell-ads',
-    operationId: "storeSellAds",
-    summary: "store sell ads",
+    path: '/api/v1/ads/store-buy-ads',
+    operationId: "storeBuyAds",
+    summary: "store buy ads",
     security: [['sanctum' => []]],
-    requestBody: new OA\RequestBody(ref: '#/components/requestBodies/StoreSellAdRequest'),
+    requestBody: new OA\RequestBody(ref: '#/components/requestBodies/StoreBuyAdRequest'),
     tags: ['Ads'],
     responses: [
         new OA\Response(response: 200, description: 'Success', content: new OA\JsonContent(
@@ -27,15 +26,6 @@ use OpenApi\Attributes as OA;
                 new OA\Property(property: 'status', type: 'string'),
                 new OA\Property(property: 'message', type: 'string'),
                 new OA\Property(property: 'data', title: 'string',example: 'slug ad'),
-            ],
-            type: 'object'
-        )),
-        new OA\Response(response: 402, description: 'Exit ad', content: new OA\JsonContent(
-            properties: [
-                new OA\Property(property: 'status', type: 'string'),
-                new OA\Property(property: 'message', type: 'string'),
-                new OA\Property(property: 'data', ref: '#/components/schemas/AdExistsAdViewModel'),
-
             ],
             type: 'object'
         )),
@@ -48,7 +38,7 @@ use OpenApi\Attributes as OA;
         )),
     ]
 )]
-class StoreSellAdHandler extends Handler
+class StoreBuyAdHandler extends Handler
 {
     protected AdServiceInterface $adService;
 
@@ -60,50 +50,21 @@ class StoreSellAdHandler extends Handler
         $this->adMapper = $adMapper;
     }
 
-    public function __invoke(StoreSellAdRequest $request): JsonResponse
+    public function __invoke(StoreBuyAdRequest $request): JsonResponse
     {
         try {
             DB::beginTransaction();
             $user = Auth::user();
-
-
-            $license_number = $request->input('license_number');
-            $exit_ad = $this->adService->CheckIsExitAd($license_number);
-            if ($exit_ad) {
-                $adViewModel = $this->adMapper->toExistsViewModel($exit_ad);
-                return responseApiFalse(
-                    code: 402,
-                    data: $adViewModel->toArray()
-                );
-            }
-
-            $ad = $this->adService->create(MainType::SELL, $request->validated(), $user);
-            if ($request->hasFile('main_image')) {
-                $ad->addMediaFromRequest('main_image')->toMediaCollection('main_image');
-            }
-
-            if ($request->has('images')) {
-                foreach ($request->file('images') as $image) {
-                    $ad->addMedia($image)->toMediaCollection('images');
-                }
-            }
-
-            if ($request->hasFile('video')) {
-                $ad->addMediaFromRequest('video')->toMediaCollection('video');
-            }
+            $ad = $this->adService->create(MainType::Buy, $request->validated(), $user);
             $slug=$ad->slug;
-            $cacheKey = 'ad_platform_view_' . $license_number;
-            $cacheKey_ch = 'ad_check_' . $license_number;
 
-            Cache::forget($cacheKey);
-            Cache::forget($cacheKey_ch);
             DB::commit();
             return responseApi(
                 data: $slug,
             );
         } catch (\Exception $e) {
             DB::rollBack();
-            \Log::error('Error in Store Sell Ad Handler', [
+            \Log::error('Error in Store Buy Ad Handler', [
                 'error'     => $e->getMessage(),
                 'file'      => $e->getFile(),
                 'line'      => $e->getLine(),
